[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/clickable.gd" type="Script" id=1]

[node name="Clickable" type="Area2D"]
script = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Clickable_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Clickable_mouse_exited"]
